--- a/documentation/routes.html
+++ b/documentation/routes.html
@@ -28,7 +28,7 @@
                    <compodoc-menu mode="normal"></compodoc-menu>
                </div>
                <!-- START CONTENT -->
-               <div class="content package-dependencies">
+               <div class="content routes">
                    <div class="content-data">
 
 
@@ -43,35 +43,17 @@
 
 
 
+<ol class="breadcrumb">
+    <li>Routes</li>
+</ol>
 
-    <ol class="breadcrumb">
-        <li>Dependencies</li>
-    </ol>
-    <ul class="dependencies-list">
-        <li>
-            <b>@angular/animations</b> : ~12.2.0</li>
-        <li>
-            <b>@angular/cdk</b> : ^12.2.3</li>
-        <li>
-            <b>@angular/common</b> : ~12.2.0</li>
-        <li>
-            <b>@angular/compiler</b> : ~12.2.0</li>
-        <li>
-            <b>@angular/core</b> : ~12.2.0</li>
-        <li>
-            <b>@angular/forms</b> : ~12.2.0</li>
-        <li>
-            <b>@angular/platform-browser</b> : ~12.2.0</li>
-        <li>
-            <b>@angular/platform-browser-dynamic</b> : ~12.2.0</li>
-        <li>
-            <b>rxjs</b> : ~6.6.0</li>
-        <li>
-            <b>tslib</b> : ^2.3.0</li>
-        <li>
-            <b>zone.js</b> : ~0.11.4</li>
-    </ul>
+<div id="body-routes"></div>
 
+<script src="./js/libs/d3.v3.min.js"></script>
+<script src="./js/libs/innersvg.js"></script>
+
+<script src="./js/routes/routes_index.js"></script>
+<script src="./js/routes.js"></script>
                    
 
 
@@ -93,8 +75,8 @@
 
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 0;
-            var COMPODOC_CURRENT_PAGE_CONTEXT = 'package-dependencies';
-            var COMPODOC_CURRENT_PAGE_URL = 'dependencies.html';
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'routes';
+            var COMPODOC_CURRENT_PAGE_URL = 'routes.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
